@@ -96,6 +96,7 @@ DEFAULT_SITEMASTER_EMAIL = 'noreply@localhost'
 DEFAULT_MANAGER_ROLES = ['Manager', 'IssueTracker Manager']
 DEFAULT_DEFAULT_BATCH_SIZE = getEnvInt('ITP_DEFAULT_BATCH_SIZE', 20)
 DEFAULT_OUTLOOK_BATCH_SIZE = getEnvInt('ITP_OUTLOOK_BATCH_SIZE', 10)
+DEFAULT_ALLOW_SHOW_ALL = True
 DEFAULT_ISSUEPREFIX = ''
 DEFAULT_NO_FILEATTACHMENTS = getEnvInt('ITP_NO_FILEATTACHMENTS', 2)
 DEFAULT_NO_FOLLOWUP_FILEATTACHMENTS = getEnvInt('ITP_NO_FOLLOWUP_FILEATTACHMENTS', 2)
